# python-bootcamp-42

./: .pre-commit-config.yaml  README.md  pyproject.toml
Array/: README.md
Array/ex00/: give_bmi.py
Array/ex01/: array2D.py
Array/ex03/: load_image.py  zoom.py
Array/ex04/: load_image.py  rotate.py
Array/ex05/: pimp_image.py  tester.py
DOD/: README.md
DOD/ex00/: statistics.py  tester.py
DOD/ex01/: in_out.py  tester.py
DOD/ex02/: callLimit.py
DOD/ex03/: new_student.py  tester.py
DataTable/: README.md
DataTable/ex00/: load_csv.py
DataTable/ex01/: aff_life.py
DataTable/ex02/: aff_pop.py
DataTable/ex03/: projection_life.py
OOP/: README.md
OOP/ex00/: S1E9.py  tester.py
OOP/ex01/: S1E9.py  tester.py
OOP/ex02/: DiamondTrap.py  S1E7.py  tester.py
OOP/ex03/: ft_calculator.py  tester.py
OOP/ex04/: ft_calculator.py
Starting/: README.md
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py
Starting/ex03/: NULL_not_found.py  whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py
Starting/ex09/: LICENSE  README.md  pyproject.toml
Starting/ex09/src/ft_package/: __init__.py  count_in_list.py
