[project]
name = "p4ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "tqdm>=4.67.1",
]
