[project]
name = "ft_package"
version = "0.0.1"
description = "A simple test package"
readme = "README.md"
authors = [
    { name = "barrak7", email = "hamzabarrak83@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[project.urls]
HOMEPAGE = "https://github.com/barrak7/python-bootcamp-42"
